adding html file

--- a/test.html
+++ b/test.html
@@ -5,10 +5,11 @@
 		</title>
 	</head>
 <body>
-<img src="twitter.jpeg" align="middle">
+<center><img src="twitter.jpeg"></center>
 <form>
-<input type="text" name="genericname">
+<center><input type="text" name="genericname"></center>
 </form>
+<CENTER><button type="button">Submit</button> </CENTER>
 </body>
 
 </html>
