--- a/test.html
+++ b/test.html
@@ -11,5 +11,8 @@
 </form>
 <CENTER><button type="button">Submit</button> </CENTER>
 </body>
+<footer>
+	<p style="text-align: center">Copyright 2014</p>
+</footer>
 
 </html>
